--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,13 @@
 // app global css in SCSS form
+@font-face {
+  font-family: 'gowun';
+  src:
+    url('./fonts/GowunBatang-Regular.ttf') format('truetype'),
+    url('./fonts/GowunBatang-Bold.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'gowun', 'roboto', 'sans-serif';
+}
